[package]
name = "zc_io"
version = "0.2.0" # update html_root_url in src/lib.rs and version in README.md

authors = ["Sean C. Roach <me@seancroach.dev>"]
categories = ["no-std", "rust-patterns"]
description = "Simple zero-copy I/O."
edition = "2021"
keywords = ["io", "serde", "zero-copy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/seancroach/zc_io"

[features]
default = ["std"]

std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
